[package]
name = "secure_smoke_service"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Smoke-test service used for DAST and security-route regression checks."
readme = "README.md"
repository = "https://github.com/kerberosmansour/SunLitSecurityLibraries"
publish = false

[[bin]]
name = "secure_smoke_service"
path = "src/main.rs"

[lib]
name = "secure_smoke_service"
path = "src/lib.rs"

[dependencies]
# Workspace library crates
security_core = { workspace = true }
secure_errors = { workspace = true }
security_events = { workspace = true }
secure_boundary = { workspace = true, features = ["mobile-platform"] }
# E2E tests exercise the Actix-web 4 adapters via a feature-flagged test
# harness; the axum smoke binary itself does not depend on actix-web at runtime.
secure_output = { workspace = true }
secure_identity = { workspace = true, features = ["biometric"] }
secure_authz = { workspace = true }
secure_data = { workspace = true, features = ["mobile-storage"] }
secure_network = { workspace = true }
secure_resilience = { workspace = true }
secure_privacy = { workspace = true }

# Axum / Tower / Tokio
axum = "0.8"
axum-core = "0.5"
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6", features = ["request-id", "timeout", "catch-panic", "trace"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }

# Serialisation
serde = { workspace = true }
serde_json = "1"

# Utilities
uuid = { workspace = true }
time = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
http = "1"
thiserror = "2"

# JWT creation for tests
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
bytes = "1"
base64 = "0.22"
# For sg-gate-a M1 E2E tests against the Actix-web 4 adapters. The additional
# features are unified with the `[dependencies]` entry so the test target
# sees both the existing axum integration and the Actix adapters.
secure_boundary = { workspace = true, features = ["actix-web"] }
secure_authz = { workspace = true, features = ["actix-web"] }
secure_errors = { workspace = true, features = ["actix-web"] }
actix-web = "4"
