[package]
name = "security_core"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shared security types, identity traits, correlation context, and data classification primitives."
readme = "README.md"
repository = "https://github.com/kerberosmansour/SunLitSecurityLibraries"
documentation = "https://docs.rs/security_core"
keywords = ["security", "identity", "types", "audit"]

[lib]
name = "security_core"

[dependencies]
uuid = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
time = { workspace = true, features = ["macros"] }
