[package]
name = "security_events"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Security telemetry, redaction, HMAC-sealed events, and audit-friendly event sinks."
repository = "https://github.com/kerberosmansour/SunLitSecurityLibraries"
documentation = "https://docs.rs/security_events"
keywords = ["security", "audit", "telemetry", "logging"]

[lib]
name = "security_events"

[features]
default = []
otel = ["dep:tracing-opentelemetry", "dep:opentelemetry"]
http-sink = ["dep:reqwest"]

[dependencies]
security_core = { package = "security_core", version = "0.1.0", path = "../security_core" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
serde = { workspace = true }
serde_json = "1"
uuid = { workspace = true }
time = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
tracing-opentelemetry = { version = "0.27", optional = true }
opentelemetry = { version = "0.27", optional = true }

[dev-dependencies]
serde_json = "1"
secure_errors = { package = "secure_errors", version = "0.1.0", path = "../secure_errors" }
proptest = "1"
