[package]
name = "secure_data-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
secure_data = { package = "secure_data", path = "..", features = ["mobile-storage"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[[bin]]
name = "fuzz_encrypt_decrypt"
path = "fuzz_targets/fuzz_encrypt_decrypt.rs"
test = false
bench = false

[[bin]]
name = "fuzz_sensitive_buffer"
path = "fuzz_targets/fuzz_sensitive_buffer.rs"
test = false
bench = false
