[package]
name = "secure_identity-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
secure_identity = { package = "secure_identity", path = ".." }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[[bin]]
name = "fuzz_token_validate"
path = "fuzz_targets/fuzz_token_validate.rs"
test = false
bench = false
