[package]
name = "secure_network-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
secure_network = { package = "sunlit_secure_network", path = ".." }

[[bin]]
name = "fuzz_tls_policy"
path = "fuzz_targets/fuzz_tls_policy.rs"
test = false
bench = false

[[bin]]
name = "fuzz_cert_pin"
path = "fuzz_targets/fuzz_cert_pin.rs"
test = false
bench = false

[[bin]]
name = "fuzz_cleartext"
path = "fuzz_targets/fuzz_cleartext.rs"
test = false
bench = false
