[package]
name = "secure_resilience-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
secure_resilience = { package = "secure_resilience", path = ".." }
security_events = { package = "security_events", path = "../../security_events" }

[[bin]]
name = "fuzz_rasp_signals"
path = "fuzz_targets/fuzz_rasp_signals.rs"
test = false
bench = false
