[package]
name = "security_events-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
security_events = { package = "security_events", path = ".." }
security_core = { package = "security_core", path = "../../security_core" }

[[bin]]
name = "fuzz_sanitize"
path = "fuzz_targets/fuzz_sanitize.rs"
test = false
bench = false

[[bin]]
name = "fuzz_mobile_redaction"
path = "fuzz_targets/fuzz_mobile_redaction.rs"
test = false
bench = false
